k8s/ingress-nginx-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: blogstone.dev
      http:
          paths:
            - path: /api/?(.*)
              backend:
                serviceName: server-srv
                servicePort: 4242
